feat: Add comprehensive game data, implement routing for landing page and calculator, and integrate language context and chatbot functionality.

--- a/index.html
+++ b/index.html
@@ -2,34 +2,38 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Forge Calculator - Roblox Wiki & Tools</title>
-  <meta name="description"
-    content="The ultimate calculator and wiki for Roblox The Forge. Find info on Ores, Weapons, Armor, Enemies, and more. Includes an AI Assistant!" />
-  <meta name="keywords" content="Roblox, The Forge, Calculator, Wiki, Ore, Weapon, Armor, RPG, Guide" />
-  <meta name="author" content="Fantasy Forge Calculator Team" />
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Forge AI - Roblox Assistant & Calculator | Wiki & Tools</title>
+    <meta name="description"
+        content="The Forge AI - Your ultimate AI-powered assistant for Roblox The Forge. Advanced calculator, intelligent chatbot, best recipes, and complete wiki for Ores, Weapons, Armor, and more!" />
+    <meta name="keywords"
+        content="The Forge AI, Roblox, The Forge, Calculator, AI Assistant, Wiki, Ore, Weapon, Armor, RPG, Guide, Chatbot, Forge Calculator, Best Recipes" />
+    <meta name="author" content="The Forge AI Team" />
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://fantasy-forge-calculator.vercel.app/" />
-  <meta property="og:title" content="The Forge Calculator - Roblox Wiki & Tools" />
-  <meta property="og:description"
-    content="The ultimate calculator and wiki for Roblox The Forge. Find info on Ores, Weapons, Armor, Enemies, and more." />
-  <meta property="og:image" content="/favicon.png" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://fantasy-forge-calculator.vercel.app/" />
+    <meta property="og:title" content="The Forge AI - Roblox Assistant & Calculator" />
+    <meta property="og:description"
+        content="Your ultimate AI-powered assistant for Roblox The Forge. Advanced calculator, intelligent chatbot, and complete wiki for all your forging needs!" />
+    <meta property="og:image" content="/favicon.png" />
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:title" content="The Forge Calculator - Roblox Wiki & Tools" />
-  <meta property="twitter:description"
-    content="The ultimate calculator and wiki for Roblox The Forge. Find info on Ores, Weapons, Armor, Enemies, and more." />
-  <meta property="twitter:image" content="/favicon.png" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="The Forge AI - Roblox Assistant & Calculator" />
+    <meta property="twitter:description"
+        content="Your ultimate AI-powered assistant for Roblox The Forge. Advanced calculator, intelligent chatbot, and complete wiki!" />
+    <meta property="twitter:image" content="/favicon.png" />
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
+    <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 
 </html>
