feat: Add Google AdSense script to index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <meta property="twitter:description"
         content="Your ultimate AI-powered assistant for Roblox The Forge. Advanced calculator, intelligent chatbot, and complete wiki!" />
     <meta property="twitter:image" content="/favicon.png" />
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9383919599439170"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
