--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="keywords"
         content="The Forge AI, Roblox, The Forge, Calculator, AI Assistant, Wiki, Ore, Weapon, Armor, RPG, Guide, Chatbot, Forge Calculator, Best Recipes" />
     <meta name="author" content="The Forge AI Team" />
+    <meta name="google-adsense-account" content="ca-pub-9383919599439170">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
