feat: add meta tag

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9383919599439170"
         crossorigin="anonymous"></script>
+    <meta name="6ec604171a8580052034c46953e95ab36a68e7fa" content="6ec604171a8580052034c46953e95ab36a68e7fa" />
+    <meta name="referrer" content="no-referrer-when-downgrade" />
 </head>
 
 <body>
