feat: add html for ads

--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
 <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
+    <script>
+        (function (uemcaj) {
+            var d = document,
+                s = d.createElement('script'),
+                l = d.scripts[d.scripts.length - 1];
+            s.settings = uemcaj || {};
+            s.src = "\/\/frail-benefit.com\/cLDB9u6.bd2_5ZlLS\/W_Q\/9\/NxjicQyEOgTkI\/4iMniG0s2dNQz\/Ip5HMujZgmzc";
+            s.async = true;
+            s.referrerPolicy = 'no-referrer-when-downgrade';
+            l.parentNode.insertBefore(s, l);
+        })({})
+    </script>
 </body>
 
 </html>
