feat: add html multi tag ads

--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
             l.parentNode.insertBefore(s, l);
         })({})
     </script>
+    <script>
+            (function (vbcmy) {
+                var d = document,
+                    s = d.createElement('script'),
+                    l = d.scripts[d.scripts.length - 1];
+                s.settings = vbcmy || {};
+                s.src = "\/\/guilty-address.com\/bKXQVTs.dcGBlC0nY\/WNcm\/je\/mm9Su\/ZIUnllkkPaTfYe3OMrjCkp0KM\/TWEctVNWjscOyGOuT\/Q-xdMQgP";
+                s.async = true;
+                s.referrerPolicy = 'no-referrer-when-downgrade';
+                l.parentNode.insertBefore(s, l);
+            })({})
+    </script>
 </body>
 
 </html>
